# gpt-commit

./: .gitignore  README.md  pyproject.toml  setup.py
gpt_commit/: __init__.py  ai_model.py  main.py  setup.py  utils.py
tests/: test_ai_model.py  test_main.py
