[tool.poetry]
name = "gpt-commit"
version = "0.1.0"
description = ""
authors = ["tkt-tmp <t.tampo@okorande.com>"]
readme = "README.md"
packages = [{include = "gpt_commit"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
