[tool.poetry]
name = "gpt-commit"
version = "0.1.0"
description = ""
authors = ["tkt-tmp <t.tampo@okorande.com>"]
readme = "README.md"
packages = [{include = "gpt_commit"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
langchain = "^0.0.142"
transformers = "^4.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gpt_commit = 'gpt_commit.main:main'
